# kommit

./: .env.example  .gitignore  .gitleaksignore  Anchor.toml  LICENSE  QA_VERIFICATION.md  README.md  RECOVERY.md  RISK.md  SECURITY.md  SECURITY_NOTES.md  SECURITY_REVIEW.md  SETUP.md  TODO_SECURITY.md  package.json
idls/: kamino_lending.json
migrations/: deploy.ts
migrations/supabase/: 0001_initial_schema.sql  0002_event_identity.sql  0003_explicit_function_privs.sql  0004_founder_updates_engagement.sql  0005_waitlist.sql  0006_waitlist_ip_hash_text.sql  0007_sandbox_airdrops.sql  0008_sandbox_airdrops_kind.sql  0009_founders.sql  0010_founder_applications.sql  0011_rate_limits.sql
programs/kommit/: Cargo.toml
programs/kommit/src/: errors.rs  events.rs  lib.rs  state.rs
programs/kommit/src/adapters/: kamino.rs  mod.rs
programs/kommit/src/instructions/: accrue_points.rs  admin_pause.rs  admin_update_project_metadata.rs  commit.rs  create_project.rs  harvest.rs  initialize_config.rs  initialize_kamino_adapter_config.rs  mod.rs  supply_to_yield_source.rs  withdraw.rs
scripts/: bootstrap_mainnet.ts  create_project.ts  deploy_mainnet.sh  onboard_founder.ts  pin_project_metadata.ts  smoke_klend_devnet.ts  smoke_mainnet.ts  sync_idl_to_web.sh  visa-demo-register-paylink.mjs  visa-demo-register-webhook.mjs
tests/: kommit.ts
web/: .env.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
web-legacy-anchor-ref/: README.md  next.config.ts  package-lock.json  package.json
(+223 files in other folders)
